--- a/Landing_Page.html
+++ b/Landing_Page.html
@@ -19,16 +19,20 @@
         </ul>
     </div>
     <div class="first">
+        <div class="left">
         <div class="big">
-            This site is awesome.
+            This website is awesome.
         </div>
         <div class="small">
             This site has some subtext that goes under the main title. Its a smaller font and lower contrast.
         </div>
         <button>Sign Up</button>
+        </div>
+        <div class="right"></div>
     </div>
     <div class="second">
         <div class="heading">Some random information</div>
+        <div class="images">
         <div class="image">
             <div class="empty"></div>
             <div class="text">this is some subtext under an image or illustration.</div>
@@ -45,10 +49,25 @@
             <div class="empty"></div>
             <div class="text">this is some subtext under an image or illustration.</div>
         </div>
+        </div>    
     </div>
     <div class="third">
-        <div class="big-text">This is an inspiring quote or a testimonial from a customer.Maybe it is filling space, or maybe people will read it.Who knows? All I know is that it looks nice.</div>
-        <div class="small-text">-Thor,God of Thunder</div>
+       
+        <div class="big-text"> <blockquote>
+  <p>This is an inspiring quote or a testimonial from a customer.Maybe it is filling space, or maybe people will read it.Who knows? All I know is that it looks nice</p>
+  <footer class="small-text">-Thor,God of Thunder</footer>
+</blockquote></div>
     </div>
+  <div class="end">  
+    <div class="fourth">
+     <div class="lower-left">    
+        <p class="exclaim">Call to action! It's time!</p>
+        <p class="smaller">Sign up for our product by clicking that button right over there!</p>
+     </div>
+     <div class="lower-right">
+        <button class="white">Sign up</button>
+        </div>    
+    </div>
+</div>        
 </body>
 </html>
